--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
     "manifest_version": 3,
     "name": "ChangeMyLifeAI - AI Tools Daily",
-    "description": "Every day you will get a new AI suggestion tool to help you in your life.",
+    "description": "Every day you will get a new AI tool suggestion to help you in your life.",
     "version": "1.0",
     "icons": {
       "16": "images/icon-16.png",
       "32": "images/icon-32.png",
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
+    },
+    "action": {
+      "default_popup": "popup/popup.html"
     },
     "content_scripts": [
       {
