connect aws gateway api

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     "content_scripts": [
       {
         "js": [
-          "scripts/content.js"
+          "popup/popup.js"
         ],
         "matches": [
           "https://developer.chrome.com/docs/extensions/*",
